fix RGL overflow issue

--- a/packages/react-components/style/output-components-style.css
+++ b/packages/react-components/style/output-components-style.css
@@ -14,6 +14,7 @@
     background-color: var(--theia-layout-color4);
     display: grid;
     grid-template-rows: 25px 1fr;
+    position: relative;
 }
 .widget-handle :hover {
     background-color: var(--theia-list-hoverBackground); 
@@ -48,6 +49,7 @@
     overflow: hidden;
     position: relative;
     z-index: -1;
+    background: var(--theia-editor-background);
 }
 
 .disable-select {
@@ -264,4 +266,8 @@ canvas {
     font-size: var(--theia-ui-font-size1);
     box-shadow: 0px 1px 6px var(--theia-widget-shadow);
     border: 1px solid var(--ag-border-color, #bdc3c7) ;
+}
+
+.react-grid-item:hover {
+    z-index: 10;
 }
